syntax = "proto3";
package order;

option go_package = "github.com/immxrtalbeast/order_microservices/internal/protos/gen/go/order";
import "google/protobuf/timestamp.proto";

service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc Order(OrderRequest) returns (OrderResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

message CreateOrderRequest{ 
    string user_id = 1;
    repeated OrderItem items = 2;
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
}

message CreateOrderResponse{
    string order_id = 1;
    OrderStatus status = 2;
}

message OrderRequest{
    string order_id = 1;
}

message OrderResponse{
    Order order = 1;
}

message ListOrdersRequest{
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message ListOrdersResponse{
    repeated Order orders = 1;
}

message DeleteOrderRequest{
    string order_id = 1;
}

message DeleteOrderResponse{
    bool success = 1;
}

message Order{
    string id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    float total = 4;
    OrderStatus status = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

enum OrderStatus{
    CREATED = 0;
    PROCESSING = 1;
    COMPLETED = 2;
    CANCELLED = 3;
}


